# thumbnailer

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  pyproject.toml  tasks.py  thumbnailer.py
.github/workflows/: main.yml
pelican/plugins/thumbnailer/: __init__.py  test_thumbnails.py  thumbnailer.py
